Fix coverage analysis